# voice-presentation-generator

./: .gitignore  main.ipynb
agent_api/: .gitignore  README.md  agent.py  main.py  models.py  pyproject.toml  requirements.txt  types.py
voice_backend/: agent.py  pyproject.toml  requirements.txt
voice_backend/agents/: functions.py
voice_frontend/: package.json  pnpm-lock.yaml
voice_frontend/app/: page.tsx
voice_frontend/app/slides/: page.tsx
voice_frontend/components/: RPCHandler.tsx  Slides.tsx
voicer/: agent.py  requirements.txt
voicer/agents/: functions.py
